3주차: 이미지 경로 수정

--- a/week3/index.html
+++ b/week3/index.html
@@ -110,7 +110,7 @@
     <div id="img-wrapper" class="absolute w-screen h-screen overflow-hidden">
       <div
         id="background"
-        src="./imgs/background2x.png"
+        src="./imgs/background.png"
         class="bsolute top-0 left-0 object-cover will-change-transform"
         draggable="false"
       ></div>
