--- a/week3/index.html
+++ b/week3/index.html
@@ -100,6 +100,10 @@
         z-index: 11;
       "
     >
+      <div>
+        <h1>얻오비 신당에 어서오세요</h1>
+        <p>디자인이 잘 안풀리는 당신을 위한, 디지털 굿</p>
+      </div>
       <button
         id="download-placeholders"
         class="bg-amber-700 text-white px-4 py-2 rounded shadow hover:bg-amber-500 transition"
@@ -110,7 +114,7 @@
     <div id="img-wrapper" class="absolute w-screen h-screen overflow-hidden">
       <div
         id="background"
-        src="./imgs/background.png"
+        src="./imgs/sindang.png"
         class="bsolute top-0 left-0 object-cover will-change-transform"
         draggable="false"
       ></div>
