--- a/week3/index.html
+++ b/week3/index.html
@@ -19,7 +19,7 @@
             id="ph-coffee"
             src="./public/placeholder/coffe_ph.svg"
             draggable="false"
-            class="w-[140px] h-[140px] object-bottom object-none"
+            class="w-[140px] h-[140px] object-bottom object-none aspect-square"
             draggable="false"
           />
         </label>
@@ -37,7 +37,7 @@
           <img
             id="ph-macbook"
             src="./public/placeholder/macbook_ph.svg"
-            class="w-[140px] h-[140px] object-bottom object-scale-down"
+            class="w-[140px] h-[140px] object-bottom object-scale-down aspect-square"
             draggable="false"
           />
         </label>
@@ -55,7 +55,7 @@
           <img
             id="ph-photoshop"
             src="./public/placeholder/photoshop_ph.svg"
-            class="w-[140px] h-[140px] object-bottom object-scale-down"
+            class="w-[140px] h-[140px] object-bottom object-scale-down aspect-square"
             draggable="false"
         /></label>
         <input
@@ -77,7 +77,7 @@
           <img
             id="ph-tear"
             src="./public/placeholder/tear_ph.svg"
-            class="w-[140px] h-[140px] object-bottom object-none"
+            class="w-[140px] h-[140px] object-bottom object-none aspect-square"
             draggable="false"
           />
         </label>
