--- a/week8/index.html
+++ b/week8/index.html
@@ -27,17 +27,86 @@
         background: #000;
         color: #fff;
       }
-      #root {
+      #game-of-life-canvas {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
+        z-index: -1;
+      }
+      #inputVideo {
+        display: none; /* 비디오는 보이지 않게 처리 */
+      }
+
+      #controls {
+        position: fixed;
+        top: 10px;
+        left: 10px;
+        z-index: 10;
+        background-color: rgba(30, 30, 30, 0.85);
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+      }
+      .control-group {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+      .control-group label {
+        font-weight: bold;
+      }
+      .control-group input[type="text"],
+      .control-group select,
+      .control-group button {
+        padding: 5px;
+        border: 1px solid #555;
+        border-radius: 4px;
+        background-color: #333;
+        color: #fff;
+      }
+      .control-group button {
+        cursor: pointer;
+        background-color: #007bff;
+        border: none;
+      }
+      .control-group button:hover {
+        background-color: #0056b3;
       }
     </style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <div id="controls">
+      <div class="control-group">
+        <button id="videoBtn">🎞 영상</button>
+        <button id="webcamBtn">📷 웹캠</button>
+      </div>
+      <div class="control-group">
+        <input type="text" id="hangul-input" placeholder="ex: 가" value="가" />
+        <button id="apply-hangul">적용</button>
+      </div>
+      <div class="control-group">
+        <input type="checkbox" id="video-bg-toggle" />
+        <label for="video-bg-toggle">배경 영상 보기</label>
+      </div>
+      <div class="control-group">
+        <label for="mode-select">모드:</label>
+        <select id="mode-select">
+          <option value="random">랜덤</option>
+          <option value="consonant">자음</option>
+          <option value="vowel">모음</option>
+        </select>
+      </div>
+    </div>
+
+    <video id="inputVideo" playsinline muted></video>
+    <canvas id="game-of-life-canvas"></canvas>
+
+
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
