--- a/week8/index.html
+++ b/week8/index.html
@@ -78,6 +78,7 @@
         background-color: #0056b3;
       }
     </style>
+    <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
