--- a/week8/index.html
+++ b/week8/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chiron+Sung+HK:ital,wght@0,200..900;1,200..900&family=Grandiflora+One&display=swap"
+      rel="stylesheet"
+    />
     <style>
       * {
         margin: 0;
