--- a/week8/index.html
+++ b/week8/index.html
@@ -83,6 +83,10 @@
       }
     </style>
     <link href="/src/style.css" rel="stylesheet" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@mediapipe/selfie_segmentation/selfie_segmentation.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
